added final section

--- a/index.html
+++ b/index.html
@@ -25,5 +25,18 @@
       <h1>Guess The Number!</h1>
       <div class="square"><span class="guess-number">?</span></div>
     </div>
+    <div class="bottom-div container">
+      <div class="left-col">
+        <input type="number" class="input-number" />
+        <button class="check">Check!</button>
+      </div>
+      <div class="right-col">
+        <p>Start guessing...</p>
+        <div class="scoreboard">
+          <p>💯 Score: <span class="score">20</span></p>
+          <p>🏆 Highscore: <span class="score">12</span></p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
