--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
       href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"
       rel="stylesheet"
     />
-    <script src="script.js"></script>
   </head>
   <body>
     <div class="upper-container-border-bottom">
@@ -31,12 +30,13 @@
         <button class="check">Check!</button>
       </div>
       <div class="right-col">
-        <p>Start guessing...</p>
+        <p class="message">Start guessing...</p>
         <div class="scoreboard">
           <p>💯 Score: <span class="score">20</span></p>
-          <p>🏆 Highscore: <span class="score">12</span></p>
+          <p>🏆 Highscore: <span class="highscore">0</span></p>
         </div>
       </div>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
